--- a/03. Partie réglementaire - Décrets simples/Article D421-2 - 6843902.md
+++ b/03. Partie réglementaire - Décrets simples/Article D421-2 - 6843902.md
@@ -6,61 +6,61 @@ Les titres donnant droit à l'inscription aux registres sont les suivants, sous 
 
 Catégorie Essais et réceptions :
 
-- licence de pilote d'essais expérimental d'avions ;
+Licence de pilote d'essais expérimental d'avions ;
 
-- licence de pilote d'essais d'avions ;
+Licence de pilote d'essais d'avions ;
 
-- licence de pilote d'essais d'avions légers ;
+Licence de pilote d'essais d'avions légers ;
 
-- licence de pilote d'essais expérimental d'hélicoptères ;
+Licence de pilote d'essais expérimental d'hélicoptères ;
 
-- licence de pilote d'essais d'hélicoptères ;
+Licence de pilote d'essais d'hélicoptères ;
 
-- licence de pilote de réceptions d'avions ;
+Licence de pilote de réceptions d'avions ;
 
-- licence de pilote de réceptions d'hélicoptères.
+Licence de pilote de réceptions d'hélicoptères.
 
 Catégorie Transport aérien :
 
-Licence de pilote de ligne d'avion,
+Licence de pilote de ligne d'avion ;
 
-Licence de pilote professionnel de 1re classe d'avion,
+Licence de pilote professionnel de 1re classe d'avion ;
 
-Licence de pilote professionnel d'avion,
+Licence de pilote professionnel d'avion ;
 
-Licence de pilote de ligne d'hélicoptère,
+Licence de pilote de ligne d'hélicoptère ;
 
-Licence de pilote professionnel d'hélicoptère,
+Licence de pilote professionnel d'hélicoptère.
 
 Catégorie Travail aérien :
 
-Licence de pilote de ligne d'avion,
+Licence de pilote de ligne d'avion ;
 
-Licence de pilote professionnel de 1re classe d'avion,
+Licence de pilote professionnel de 1re classe d'avion ;
 
-Licence de pilote professionnel d'avion,
+Licence de pilote professionnel d'avion ;
 
-Licence de pilote de ligne d'hélicoptère;
+Licence de pilote de ligne d'hélicoptère ;
 
-Licence de pilote professionnel d'hélicoptère (2).
+Licence de pilote professionnel d'hélicoptère.
 
 2° Registres B
 
 Catégorie Essais et réceptions :
 
-- licence d'ingénieur navigant d'essais ;
+Licence d'ingénieur navigant d'essais ;
 
-- licence d'expérimentateur navigant d'essais ;
+Licence d'expérimentateur navigant d'essais ;
 
-- licence de mécanicien navigant d'essais ;
+Licence de mécanicien navigant d'essais ;
 
-- licence de mécanicien navigant de réceptions.
+Licence de mécanicien navigant de réceptions.
 
 Catégorie Transport aérien :
 
-Licence de navigateur,
+Licence de navigateur ;
 
-Licence de mécanicien navigant,
+Licence de mécanicien navigant ;
 
 Licence de radio navigant ;
 
@@ -68,13 +68,13 @@ Licence d'ingénieur navigant de l'aviation civile.
 
 Catégorie Travail aérien :
 
-Licence de navigateur,
+Licence de navigateur ;
 
-Licence de mécanicien navigant,
+Licence de mécanicien navigant ;
 
 Licence de radio navigant ;
 
-Licence d'ingénieur navigant de l'aviation civile (3) ;
+Licence d'ingénieur navigant de l'aviation civile.
 
 3° Registres C
 
@@ -84,9 +84,9 @@ Licence de parachutiste professionnel possédant la qualification Essais et réc
 
 Catégorie Travail aérien :
 
-Licence de parachutiste professionnel,
+Licence de parachutiste professionnel ;
 
-Licence de photographe navigant professionnel ;
+Licence de photographe navigant professionnel.
 
 4° Registres D
 
@@ -98,17 +98,13 @@ Catégorie Travail aérien :
 
 Certificat de sécurité sauvetage.
 
+Catégorie Essais et réceptions :
+
+Certificat de sécurité sauvetage.
+
 Donnent également droit à l'inscription aux registres les titres délivrés par les autres Etats membres de la Communauté
 économique européenne et validés par le ministre chargé de l'aviation civile ou, dans le domaine des essais et réceptions,
 par le ministre de la défense, sous réserve qu'ils soient en cours de validité.
-
-**Nota:**
-
-(1) Décret n° 79-144 du 17 janvier 1979 (art. 1er).
-
-(2) Décret n° 69-1 du 2 janvier 1969 (art. 1er).
-
-(3) Décret n° 85-57 du 17 janvier 1985 (art. 1er).
 
 **Liens relatifs à cet article**
 
@@ -122,4 +118,4 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°99-53 du 20 janvier 1999 - art. 1 () JORF 27 janvier 1999
+  - Décret n°2005-639 du 30 mai 2005 - art. 1 () JORF 31 mai 2005
