--- a/01. Partie législative/Article L213-1 - 6844158.md
+++ b/01. Partie législative/Article L213-1 - 6844158.md
@@ -7,7 +7,8 @@ douanes, applicables :
 Sur les aérodromes ouverts à la circulation aérienne publique ;
 
 Sur les aérodromes réservés à l'usage d'administrations de l'Etat, sans préjudice de l'application, sur les aérodromes
-militaires, des articles 70 et suivants du code pénal, et, le cas échéant, de dispositions spéciales ;
+militaires, des articles 411-1 à 411-11 du code pénal ainsi que des articles 476-1 à 476-5 du code de justice militaire, et,
+le cas échéant, de dispositions spéciales ;
 
 Sur les aérodromes à usage restreint autres que les aérodromes réservés à l'usage d'administrations de l'Etat ;
 
@@ -17,15 +18,18 @@ câbles et canalisations qui les desservent ;
 
 Sur les dépendances des aérodromes et des installations à usage aéronautique qui ne sont pas librement accessibles au public.
 
+Les dispositions du présent article sont applicables à Mayotte, dans les îles Wallis et Futuna, en Polynésie française et en
+Nouvelle-Calédonie.
+
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Décret n°67-333 1967-03-30
+  - Décret n°67-333 du 30 mars 1967
 
-_Créé par_:
+_Modifié par_:
 
-  - Loi n°73-10 du 4 janvier 1973 - art. 1 () JORF 5 janvier 1973
+  - Ordonnance n°2005-863 du 28 juillet 2005 - art. 2 () JORF 29 juillet 2005
 
 _Cité par_:
 
@@ -36,6 +40,15 @@ _Cité par_:
   - Code de l'aviation civile - art. R213-1 (V)
   - Code de l'aviation civile - art. R213-4 (Ab)
 
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6332-1 (V)
+
 _Cite_:
 
-  - Code pénal 70 et suivants
+  - Code pénal
+  - Code de justice militaire
