--- a/03. Partie réglementaire - Décrets simples/Article D131-3 - 6843643.md
+++ b/03. Partie réglementaire - Décrets simples/Article D131-3 - 6843643.md
@@ -1,7 +1,7 @@
 # Article D131-3
 
-La circulation opérationnelle militaire est constituée par l'ensemble des mouvements des aéronefs qui, pour des raisons
-d'ordre technique ou militaire, relèvent de la réglementation propre à ce type de circulation.
+La circulation aérienne générale est constituée par l'ensemble des mouvements des aéronefs soumis à la réglementation propre
+à ce type de circulation.
 
 **Liens relatifs à cet article**
 
@@ -9,11 +9,11 @@ _Codifié par_:
 
   - Décret n°67-335 1967-03-30
 
-_Modifié par_:
-
-  - Décret n°85-806 1985-07-25 art. 1 JORF 31 juillet 1985
-
 _Cité par_:
 
   - Décret n°99-16 du 8 janvier 1999 - art. ANNEXE (V)
   - Code de l'aviation civile - art. D131-9 (V)
+
+_Modifié par_:
+
+  - Décret n°2005-1349 du 31 octobre 2005 - art. 1 () JORF 1er novembre 2005
