--- a/01. Partie législative/Article L721-5 - 6844426.md
+++ b/01. Partie législative/Article L721-5 - 6844426.md
@@ -19,15 +19,19 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
-_Créé par_:
+_Modifié par_:
 
-  - Loi n°99-243 du 29 mars 1999 - art. 1 () JORF 30 mars 1999
+  - Loi n°2006-10 du 5 janvier 2006 - art. 7 (V) JORF 6 janvier 2006
 
-**Liens**:
+_Abrogé par_:
 
-  - SPEC_APPLI: Loi n°99-243 du 29 mars 1999 - art. 2 (M)
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
 
 _Cité par_:
 
   - Code de l'aviation civile - art. L723-1 (VT)
   - Code de procédure pénale - art. A1 (VD)
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L1621-14 (VD)
