--- a/01. Partie législative/Article L150-13 - 6844144.md
+++ b/01. Partie législative/Article L150-13 - 6844144.md
@@ -5,9 +5,9 @@ livre et des décrets pris pour son application les agents des contributions ind
 forêts ou des douanes, les gendarmes, les ingénieurs de l'armement, affectés à l'aéronautique, les techniciens d'études et de
 fabrication des constructions aéronautiques, les ingénieurs des ponts et chaussées, les ingénieurs des travaux publics de
 l'Etat (ponts et chaussées) chargés des bases aériennes, les ingénieurs des mines, les ingénieurs des travaux publics de
-l'Etat (mines), les fonctionnaires des corps techniques de l'aviation civile, les personnels navigants effectuant des
-contrôles en vol pour le compte de l'administration, les militaires, marins et agents de l'autorité militaire ou maritime,
-commissionnés à cet effet et assermentés.
+l'Etat (mines), les inspecteurs de la sûreté nucléaire, les fonctionnaires des corps techniques de l'aviation civile, les
+personnels navigants effectuant des contrôles en vol pour le compte de l'administration, les militaires, marins et agents de
+l'autorité militaire ou maritime, commissionnés à cet effet et assermentés.
 
 **Liens relatifs à cet article**
 
@@ -18,11 +18,15 @@ _Anciens textes_:
 
 _Codifié par_:
 
-  - Décret n°67-333 1967-03-30
+  - Décret n°67-333 du 30 mars 1967
 
 _Modifié par_:
 
-  - Loi n°89-467 du 10 juillet 1989 - art. 9 () JORF 11 juillet 1989
+  - Loi n°2006-686 du 13 juin 2006 - art. 60 () JORF 14 juin 2006
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
 
 _Cité par_:
 
@@ -34,3 +38,7 @@ _Cité par_:
   - Code de l'aviation civile - art. R160-2 (V)
   - Code de l'aviation civile - art. R226-2 (V)
   - Code de l'aviation civile - art. R330-21 (M)
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6142-1 (V)
