--- a/01. Partie législative/Article L510-1 - 6844393.md
+++ b/01. Partie législative/Article L510-1 - 6844393.md
@@ -1,9 +1,9 @@
 # Article L510-1
 
-Par dérogation à l'article L. 46 (2e alinéa) du code du domaine de l'Etat, les matériels nécessaires à la pratique du vol à
-voile et du parachutisme peuvent faire l'objet soit d'une location, soit d'un prêt à usage au profit d'associations
-aéronautiques agréées. Dans l'un et l'autre cas le contrat a pour effet de transférer auxdites associations la responsabilité
-des dommages causés par les matériels loués ou prêtés.
+Conformément aux dispositions de l'article L. 2222-8 du code général de la propriété des personnes publiques, les matériels
+nécessaires à la pratique du vol à voile et du parachutisme peuvent faire l'objet soit d'une location, soit d'un prêt à usage
+au profit d'associations aéronautiques agréées. Dans l'un et l'autre cas le contrat a pour effet de transférer auxdites
+associations la responsabilité des dommages causés par les matériels loués ou prêtés.
 
 **Liens relatifs à cet article**
 
@@ -15,11 +15,22 @@ _Codifié par_:
 
   - Décret n°67-333 1967-03-30
 
+_Modifié par_:
+
+  - Ordonnance n°2006-460 du 21 avril 2006 - art. 3 () JORF 22 avril 2006 en vigueur le 1er juillet 2006
+
+_Abrogé par_:
+
+  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. 7
+
 _Cité par_:
 
   - Ordonnance n°2016-1255 du 28 septembre 2016 - art. 9
-  - Code général de la propriété des personnes publ... - art. L2222-8 (V)
 
 _Cite_:
 
-  - Code du domaine de l'Etat L46 al. 2
+  - Code général de la propriété des personnes publiques. - art. L2222-8
+
+_Nouveaux textes_:
+
+  - Code des transports - art. L6611-1 (V)
