--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R711-8 - 6845301.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R711-8 - 6845301.md
@@ -7,21 +7,22 @@ Il désigne l'enquêteur technique chargé d'en assurer l'organisation, la condu
 
 **Liens relatifs à cet article**
 
-_Cite_:
-
-  - Code de l'aviation civile - art. L711-1 (M)
-
-**Liens**:
-
-  - TXT_SOURCE: Convention 1944-12-07
-  - TXT_SOURCE: Directive 94-56 1994-11-21
-  - SPEC_APPLI: Décret n°2001-1043 2001-11-08 art. 6, art. 7 : champ d'application
-  - SPEC_APPLI: Décret n°2001-1043 du 8 novembre 2001 - art. 6 (V)
-
 _Codifié par_:
 
-  - Décret n°67-334 1967-03-30
+  - Décret n°67-334 du 30 mars 1967
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2001-1043 du 8 novembre 2001 - art. 1 () JORF 11 novembre 2001
+  - Décret n°2006-1544 du 7 décembre 2006 - art. 3 () JORF 8 décembre 2006
+
+_Nouveaux textes_:
+
+  - Code des transports - art. R1621-3 (V)
+
+_Abrogé par_:
+
+  - Décret n°2014-530 du 22 mai 2014 - art. 8
+
+_Cite_:
+
+  - Code de l'aviation civile - art. L711-1
