--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R213-1-1 - 6844636.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R213-1-1 - 6844636.md
@@ -2,21 +2,14 @@
 
 Sans préjudice des compétences reconnues aux officiers et agents de police judiciaire, ainsi qu'aux agents mentionnés à
 l'article 2 de la loi du 29 floréal an X, les contraventions de grande voirie sur les aérodromes peuvent être constatées par
-les ingénieurs de l'aviation civile et les ingénieurs des études et de l'exploitation de l'aviation civile.
+les ingénieurs de l'aviation civile et les ingénieurs des études et de l'exploitation de l'aviation civile, ainsi que par les
+agents de l'exploitant de l'aérodrome assermentés et habilités à cet effet.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
   - Décret n°67-334 1967-03-30
-
-**Liens**:
-
-  - SPEC_APPLI: Décret n°91-262 1991-03-04 art. 13
-
-_Créé par_:
-
-  - Décret n°91-262 du 4 mars 1991 - art. 6 () JORF 9 mars 1991
 
 _Cité par_:
 
@@ -36,6 +29,14 @@ _Cité par_:
   - Code de l'aviation civile - art. R217-3 (V)
   - Code de l'aviation civile - art. R217-3-3 (T)
   - Code de l'aviation civile - art. R321-5 (Ab)
+
+_Modifié par_:
+
+  - Décret n°2007-244 du 23 février 2007 - art. 3 () JORF 25 février 2007
+
+_Transféré par_:
+
+  - Décret n°2007-775 du 9 mai 2007 - art. 2 () JORF 11 mai 2007
 
 _Nouveaux textes_:
 
