--- a/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R224-4 - 6844763.md
+++ b/02. Partie réglementaire - Décrets en Conseil d'Etat/Article R224-4 - 6844763.md
@@ -76,9 +76,9 @@ e) Une fois conclu, le contrat est rendu public.
 III. - Lorsqu'un contrat a été conclu, l'exploitant engage la consultation des usagers au moins trois mois avant le début de
 chaque période tarifaire.
 
-Il notifie les tarifs des redevances mentionnées à l'article R. 224-2 hormis celles mentionnées au deuxième alinéa du 2°, et,
-le cas échéant, les modulations de celles-ci, par lettre recommandée avec avis de réception et deux mois au moins avant le
-début de chaque période tarifaire, aux ministres chargés de l'aviation civile et de l'économie. Cette notification est
+Il notifie les tarifs des redevances mentionnées à l'article R. 224-2 hormis celles mentionnées au troisième alinéa du 2°,
+et, le cas échéant, les modulations de celles-ci, par lettre recommandée avec avis de réception et deux mois au moins avant
+le début de chaque période tarifaire, aux ministres chargés de l'aviation civile et de l'économie. Cette notification est
 accompagnée de l'avis de la commission consultative économique de l'aérodrome, des éléments permettant de vérifier le respect
 du contrat et des informations mentionnées au IV de l'article R. 224-3.
 
@@ -92,10 +92,6 @@ notification, en cas de manquement aux règles générales applicables aux redev
 _Codifié par_:
 
   - Décret n°67-334 1967-03-30
-
-_Modifié par_:
-
-  - Décret n°2005-827 du 20 juillet 2005 - art. 1 () JORF 22 juillet 2005
 
 _Cité par_:
 
@@ -111,6 +107,10 @@ _Cité par_:
   - Code de l'aviation civile - art. R224-4-2 (Ab)
   - Code de l'aviation civile - art. R224-4-3 (Ab)
   - Code de l'aviation civile - art. R260-1 (V)
+
+_Modifié par_:
+
+  - Décret n°2007-244 du 23 février 2007 - art. 4 () JORF 25 février 2007
 
 _Cite_:
 
